app/styles/main.css
/*

My Custom CSS
=============

Author:  Sebastiaan Stuij
Updated: October 2014

*/

/* --------------------------------------
   Layout
   -------------------------------------- */

html {
    position: relative;
    min-height: 100%;
}


#profilepic {
    width: 216px;
    height: 297px;
}

.bold {
    font-weight:bold;
}

body {
    padding-top: 60px;
    margin-bottom: 200px;
}

#overMelanie{
    text-align: center;
}

.features {
    text-align: center;
}

.featuresHeading {
    text-align: center;
}


#features img {
    margin: 0 0 20px;
}


footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    /*height: 100px;*/

    background: #333;
    color: #eee;
    font-size: 11px;
    padding: 20px;
}


/* --------------------------------------
   Typography
   -------------------------------------- */

body {
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizelegibility;
}

.well .page-header {
    margin-top: 0;
    text-align: center;

}

.well .page-header h1 {
    margin-top: 0;
}

ul.unstyled {
    list-style: none;
    padding: 0;
}


/* --------------------------------------
   Navbar
   -------------------------------------- */

/*.navbar-brand {*/
    /*padding: 13px 15px;*/
/*}*/

/*.navbar-brand,*/
/*.navbar-nav li a {*/
    /*line-height: 100px;*/
    /*height: 100px;*/
    /*padding: 13px 15px;*/
/*}*/

/* --------------------------------------
   Carousel
   -------------------------------------- */

.carousel-caption {
    font-size: 24px;
}

.carousel-caption h4 {
    font-size: 32px;
}

/* --------------------------------------
   Global Styles
   -------------------------------------- */

.alert {
    margin-top: 20px;
    display: none;
}

#alertMe {
    margin-top: 20px;
}

.well {
    margin: 15px;
}

.tabbable img.thumbnail {
    margin: 0 20px 10px 0;
}

.thumbnails {
    margin: 20px 0;
}

.thumbnail {
    position: relative;
}

.thumbnail h3 {
    font-size: 16px;
    margin: 0 0 10px;
    line-height: 20px;
}

.thumbnail span.glyphicon {
    margin-right: 5px;
}

/* --------------------------------------
   Media Queries
   -------------------------------------- */

/* Portrait & landscape phone */
@media (max-width: 480px) {

    /*.carousel-caption {*/
        /*font-size: 4px;*/
    /*}*/

    /*.carousel-caption h4 {*/
        /*font-size: 8px;*/
    /*}*/


}

/* Landscape phone to portrait tablet */
@media (max-width: 768px) {

    /*#myCarousel .item { height: 310px; }*/

    /*#slide1 {*/
        /*background: url('../../images/carousel_small_01.jpg') top center no-repeat;*/
    /*}*/

    /*#slide2 {*/
        /*background: url('../../images/carousel_small_02.jpg') top center no-repeat;*/
    /*}*/

    /*#slide3 {*/
        /*background: url('../../images/carousel_small_03.jpg') top center no-repeat;*/
    /*}*/

    .carousel-caption {
        font-size: 16px;
    }

    .carousel-caption h4 {
        font-size: 22px;
    }

}

/* Large desktop */
@media (min-width: 1200px) {

    /*#myCarousel .item { height: 500px; }*/

    /*#slide1 {*/
        /*background: url('../../images/carousel_large_01.jpg') top center no-repeat;*/
    /*}*/

    /*#slide2 {*/
        /*background: url('../../images/carousel_large_02.jpg') top center no-repeat;*/
    /*}*/

    /*#slide3 {*/
        /*background: url('../../images/carousel_large_03.jpg') top center no-repeat;*/
    /*}*/

}

